GNOME Bugzilla – Bug 789458
gst-plugins-base: gstaudiochannels: Handled buffer mapping failure
Last modified: 2017-10-25 11:11:42 UTC
Buffer mapping failure must be handled at below code:- File: gst-plugins-base-1.12.3/gst-libs/gst/audio/audio-channels.c Function: gst_audio_buffer_reorder_channels ... if (gst_audio_channel_positions_equal (from, to, channels)) return TRUE; gst_buffer_map (buffer, &info, GST_MAP_READWRITE); ret = gst_audio_reorder_channels (info.data, info.size, format, channels, from, to); gst_buffer_unmap (buffer, &info); ... Failure of function gst_buffer_map must be handled.
Created attachment 362237 [details] [review] [PATCH] gst-plugins-base: gstaudiochannels: Handled buffer mapping failure Please review the patch attached to fix the issue and share your feedback.
Thanks, I backported the patch to the 1.12 branch as it is obviously correct. Out of curiosity, where was that function called from when you observed the issue? Is the FALSE return value appropriately handled there? Any idea why the buffer could not be mapped?