gst-plugins-base: gstaudiochannels: Handled buffer mapping failure

https://bugzilla.gnome.org/show_bug.cgi?id=789458